# Lansus_PySide_Project_Template

./: .gitignore  README.md  pyproject.toml
config/: __init__.py  config.py
controllers/: __init__.py  controller_main.py
views/: __init__.py  view_main.py
views/resources/: resources.qrc
views/resources/ui_files/: login.ui  main.ui
views/ui_components/: __init__.py  animations.py  ui_setup.py
views/ui_designs/: __init__.py  resources_rc.py  ui_login.py  ui_main.py
views/widgets/: __init__.py  custom_grips.py  login_window.py  main_window.py
